<resources>
    <string name="app_name">Meals</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recent">Recent</string>
    <string name="random">Random</string>
    <string name="meal_name">Meal Name</string>
    <string name="category">Category</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="ingredients">Ingredients</string>
    <string name="measure_placeholder">1/2 cup</string>
    <string name="ingredient_placeholder">sugar</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_placeholder">Simply mix all dry ingredients with wet ingredients and blend altogether.
        Bake for 45 min on 180 degrees. Decorate with some melted vegan chocolate
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="open_on_browser">Open on browser</string>
</resources>
