<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".cenarios.meal_detail.DetailsFragment">

    <ScrollView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <LinearLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/txt_title"
                    android:text="@string/meal_name"
                    android:textSize="32sp"
                    android:textColor="@color/textPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/txt_subtitle"
                    android:text="@string/meal_name"
                    android:textSize="20sp"
                    android:textColor="@color/textPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:id="@+id/img_meal_detail"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorPrimaryLight"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>

            <TextView
                    android:id="@+id/txt_ingredients"
                    android:text="@string/ingredients"
                    android:textSize="28sp"
                    android:textColor="@color/textPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvIngedients"
                    tools:listitem="@layout/meal_ingedients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/txt_instructions_label"
                    android:text="@string/instructions"
                    android:textSize="28sp"
                    android:textColor="@color/textPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/txt_instructions"
                    android:text="@string/instructions_placeholder"
                    android:textColor="@color/textPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <Button android:id="@+id/btn_site"
            android:layout_weight="0"
            android:text="@string/open_on_browser"
            android:textColor="@color/icons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"/>

</LinearLayout>